Add coin count info on frontend
