# java/frontend-angular/src/app/openapi-generated/model/user-dto.ts
@@ -14,5 +14,6 @@
 export interface UserDto { 
     id: number;
     name: string;
+    coinCount?: number;
 }
 
