# java/openapi.yaml
@@ -322,6 +322,9 @@ components:
           format: int32
         name:
           type: string
+        coinCount:
+          type: integer
+          format: int32
       required:
         - id
         - name
@@ -348,6 +351,8 @@ components:
           items:
             $ref: '#/components/schemas/UserDto'
         currentPlayer:
+          $ref: '#/components/schemas/UserDto'
+        winner:
           $ref: '#/components/schemas/UserDto'
       required:
         - id
